Fix issue with logo cutting off on small screens

--- a/c/content.css
+++ b/c/content.css
@@ -10,7 +10,8 @@ img.logo {
     margin-left: auto;
     margin-right: auto;
     padding: 0;
-    width: 50%;
+
+    /* width: 50%;  */
 }
  
 form {
@@ -49,12 +50,28 @@ video[poster]{
   z-index: -1000;
 }
 
-
-
-.content {
-  position: relative;
-  top: 50%;
-   -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+.content{
+    margin-top: 10px !important;
+    margin-bottom: 10px !important;
 }
+
+@media only screen 
+  and (min-height: 570px) {
+
+    .content{
+      margin-top: 0px !important;
+      margin-bottom: 0px !important;
+    }
+
+    /* vertically centered */
+    .content {
+      position: relative;
+      top: 50%;
+       -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+    }
+
+
+  }
+
