--- a/c/format.css
+++ b/c/format.css
@@ -198,7 +198,7 @@ button {
 	
 }
 #header {
-	background-color: rgb(184, 201, 157);
+	/* background-color: rgb(184, 201, 157); */
 }
 #tagline {
 	background-color:#d8ecc9;
